--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
+    "@tanstack/react-query": "^4.29.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.6",
+    "chart.js": "^4.2.1",
+    "chartjs": "^0.3.24",
     "react": "^18.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
